syntax = "proto3";

package com.liBong.oss.service;

option go_package = "./;api";

service OssService{
  rpc upload(UploadReq)returns(UploadResp){}
}

message UploadReq {
  string name = 1; //名称
  bool isKeepOriginalName = 2; //是否保留文件名
  uint32 type = 3; //上传类型 1.文件 2.图片
  bytes data = 100; //数据内容
}

message UploadResp {
  string id = 1;
  string name = 2; //文件名称
  string url = 3; //文件地址
  string file_type = 4; //文件类型
  int64 width = 100; //图片宽度
  int64 height = 101; //图片高度
}

enum UploadType{
    UploadTypeUnknown = 0;
    UploadTypeFile = 1;
    UploadTypeImage = 2;
}
enum ImageType{
  ImageTypeUnknown = 0;
  ImageTypeJPEG = 1;
  ImageTypeJPG = 2;
  ImageTypePNG = 3;
  ImageTypeGIF = 4;
}